# BotanicalClassifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/UI/pages/formulario/: main.py
src/api/: main.py
src/app/UI/: main.py
src/app/UI/assets/: main.py
src/app/UI/pages/contacto/politicas/: main.py
src/app/UI/pages/contacto/preguntas/: main.py
src/app/UI/pages/formulario/: main.py  validaciones.py
src/app/UI/pages/tabla/: main.py
src/app/UI/styles/: main.py
src/app/common/: constants.py
src/app/storage/: main.py
src/common/: config.py  constants.py  i18n.py  paths.py  settings.py  utils.py
src/gui/: main.py  page.py  styles.py  tk_enums.py  tk_events.py
src/gui/assets/: __init__.py  images.py  loaded_images.py
src/gui/pages/: about_page.py  form_page.py  menu_page.py  page.py  records_page.py
src/gui/pages/about/: _faq_page.py  _policies_page.py  _terms_page.py  about_page.py
src/gui/pages/about/info/: faq.txt
src/gui/pages/form/: form_page.py  helpers.py  utils.py
src/gui/pages/records/: helpers.py  records_page.py  utils.py
src/gui/styles/: about_page.py  app.py  form.py  form_page.py  menu_page.py  records_page.py
src/i18n/: en.json  es.json
src/local_storage/: main.py  records.txt
src/models/: __init__.py  prediction_model.py  record_model.py  search_filter_model.py
src/resources/content/en/: faq.txt  policies.txt  terms.txt
src/resources/content/es/: faq.txt  policies.txt  terms.txt
src/resources/i18n/: en.json  es.json
src/services/: __init__.py  about_service.py  form_service.py  i18n.py  i18n_service.py  predictor_service.py  records_service.py
src/services/pages/: form_service.py  records_service.py
src/storage/: main.py
src/ui/: main.py  styles.py
src/ui/assets/: images.py  loaded_images.py  main.py
src/ui/pages/: menu_page.py  page.py  table_page.py
src/ui/pages/about/: _policies_page.py  _terms_page.py  about_page.py
src/ui/pages/contact/: _faq.py  _faq_page.py  _policies.py  _policies_page.py  _terms.py  _terms_page.py  contact.py  contact_page.py
src/ui/pages/contact/info/: policies.txt
src/ui/pages/contacto/: main.py
src/ui/pages/contacto/terminos/: main.py
src/ui/pages/form/: form_page.py  utils.py  validations.py
src/ui/pages/formulario/: main.py  validaciones.py
src/ui/pages/menu/: main.py
src/ui/pages/records/: records_page.py  utils.py
src/ui/pages/tabla/: main.py
src/ui/pages/table/: table_page.py  utils.py
src/ui/styles/: main.py
