[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botanical-classifier"
version = "0.1.0"
description = "Desktop Python application for classifying five flower species using Azure Custom Vision."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Roniel Sabala", email = "ronielsabala@gmail.com" }]
keywords = ["botany", "computer-vision", "custom-vision", "azure", "flowers"]
requires-python = ">=3.13.9"
dependencies = [
    "azure-cognitiveservices-vision-customvision",
    "msrest",
    "Pillow",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["ruff", "pyright"]

# Tool configs

[tool.ruff]
fix = true
preview = true
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pyright]
typeCheckingMode = "standard"
