[project]
name = "botanical-classifier"
version = "0.1.0"
description = "Desktop application for flower classification using Python, Tkinter, and Azure Custom Vision."
requires-python = ">=3.13.9"
dependencies = [
    "azure-cognitiveservices-vision-customvision>=3.1.1",
    "msrest>=0.7.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.0"]

# Tool configs

[tool.pyright]
venv = ".venv"
venvPath = "."
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "dataset", "docs"]
typeCheckingMode = "standard"

[tool.ruff]
fix = true
preview = true
line-length = 88
indent-width = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
skip-magic-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
